--- a/frontend-main/package.json
+++ b/frontend-main/package.json
@@ -21,7 +21,8 @@
     "swiper": "^11.1.0",
     "swr": "^2.2.4",
     "tailwindcss": "^3.2.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "file-loader": "^6.2.0"
